name: hGelf
version: 0.1
cabal-version: >=1.14
build-type: Simple
license: AllRightsReserved
license-file: BSD3
copyright: Andy Georges
maintainer: itkovian@gmail.com
stability: experimental
synopsis: Haskell GELF library
description:  
category: Network
author: Andy Georges
tested-with: GHC ==7.4.1
data-dir: ""
extra-source-files: /Users/ageorges/Code/hGelf/src/Network/Gelf.hs
 
library
    build-depends: QuickCheck -any, aeson >=0.6, base -any,
                   bytestring >=0.9.2.1, network >=2.3.0.13, old-time >=1.1.0.0,
                   text >=0.11.1, time >=1.4, zlib >=0.5.3.3, cereal >= 0.3.5.1,
                   pureMD5 >= 2.1.0.3
    exposed-modules: Network.Gelf
    exposed: True
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    extensions: OverloadedStrings
    hs-source-dirs: src
    other-modules: Network.Gelf.Chunk
 
executable hGelf
    build-depends: QuickCheck -any, aeson >=0.6, base -any,
                   bytestring >=0.9.2.1, network >=2.3.0.13, old-time >=1.1.0.0,
                   text >=0.11.1, time >=1.4, zlib >=0.5.3.3
    main-is: Main.hs
    buildable: True
    extensions: OverloadedStrings
    hs-source-dirs: src
    other-modules: Network.Gelf Network.Gelf.Chunk
 
test-suite test-hGelf
    build-depends: QuickCheck -any, aeson >=0.6, base -any,
                   bytestring >=0.9.2.1, network >=2.3.0.13, old-time >=1.1.0.0,
                   text >=0.11.1, time >=1.4, zlib >=0.5.3.3
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    extensions: OverloadedStrings
    hs-source-dirs: src
