name: hGelf
version: 0.1
cabal-version: >=1.14
build-type: Simple
license: AllRightsReserved
license-file: BSD3
copyright: Andy Georges
maintainer: itkovian@gmail.com
stability: experimental
synopsis: Haskell GELF library
description: Library for sending messages in the GELF format to a server accepting Graylog2 Extended Format Log messages.
category: Network
author: Andy Georges
tested-with: GHC ==7.4.1
data-dir: ""
extra-source-files: /Users/ageorges/Code/hGelf/src/Network/Gelf.hs

source-repository this
  type: git
  location: git://github.com/itkovian/hGelf.git
  tag: 0.1
 
library
    build-depends: QuickCheck -any, aeson >=0.6, base -any,
                   bytestring >=0.9.2.1, network >=2.3.0.13, old-time >=1.1.0.0,
                   text >=0.11.1, time >=1.4, zlib >=0.5.3.3, cereal >= 0.3.5.1,
                   pureMD5 >= 2.1.0.3
    exposed-modules: Network.Gelf
    default-language: Haskell2010
    exposed: True
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    default-extensions: OverloadedStrings
    hs-source-dirs: src
    other-modules: Network.Gelf.Chunk
 
